# whisper-transcribe

./: CLAUDE.md  pyproject.toml
src/whisper_transcribe/: __init__.py  __main__.py  audio.py  client.py  core.py
tests/e2e/: test_cli.py
tests/integration/: test_client.py
tests/unit/: test_audio.py  test_core.py
