[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-transcribe"
version = "0.1.0"
description = "Batch-transcribe mp3 files via a local whisper.cpp server"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.2.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-json-report>=1.5.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.0",
]

[project.scripts]
whisper-transcribe = "whisper_transcribe.__main__:main"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "mypy src"
run = "whisper-transcribe {args}"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",  # conflicts with D211
    "D213",  # conflicts with D212
]

[tool.mypy]
strict = true
